# codex

./: .gitattributes  .gitignore  AGENTS.md  AGENTS_codex.md  CLAUDE.md  WEBSEARCH_IMPLEMENTATION_TODO.md  justfile  pnpm-workspace.yaml
coco-rs/: .gitignore  Cargo.toml  Makefile  justfile  rustfmt.toml
coco-rs/.cargo/: config.toml
coco-rs/.config/: nextest.toml
coco-rs/app/cli/: CLAUDE.md  Cargo.toml  build.rs
coco-rs/app/query/: CLAUDE.md  Cargo.toml
coco-rs/app/session/: CLAUDE.md  Cargo.toml
coco-rs/app/state/: CLAUDE.md  Cargo.toml
coco-rs/app/tui/: CLAUDE.md  Cargo.toml
coco-rs/bridge/: CLAUDE.md  Cargo.toml
coco-rs/bridge/src/: error.rs  ide.rs  ide.test.rs  jwt_utils.rs  jwt_utils.test.rs  lib.rs  permission_callbacks.rs  permission_callbacks.test.rs  protocol.rs  repl.rs  repl.test.rs  server.rs  server.test.rs  trusted_device.rs  trusted_device.test.rs  work_secret.rs  work_secret.test.rs
coco-rs/commands/: CLAUDE.md  Cargo.toml
coco-rs/commands/src/: error.rs  implementations.rs  implementations.test.rs  lib.rs  lib.test.rs
coco-rs/common/config/: CLAUDE.md  Cargo.toml
coco-rs/common/config-reload/: CLAUDE.md  Cargo.toml
coco-rs/common/error/: CLAUDE.md  Cargo.toml  README.md
coco-rs/common/llm-types/: CLAUDE.md  Cargo.toml
coco-rs/common/model-card/: Cargo.toml
coco-rs/common/otel/: CLAUDE.md  Cargo.toml
coco-rs/common/stack-trace-macro/: CLAUDE.md  Cargo.toml
coco-rs/common/types/: CLAUDE.md  Cargo.toml
coco-rs/coordinator/: CLAUDE.md  Cargo.toml
coco-rs/coordinator/src/: config.rs  config.test.rs  constants.rs  constants.test.rs  discovery.rs  discovery.test.rs  error.rs  identity.rs  identity.test.rs  inprocess_backend.rs  inprocess_backend.test.rs  lib.rs  prompt.rs  prompt.test.rs  reconnect.rs  roster_store.rs  runner.rs  runner.test.rs  runner_loop.rs  runner_loop.test.rs  runner_loop_mailbox_permission.rs  runner_loop_notify.rs  runner_loop_wait.rs  spawn.rs  spawn.test.rs  task.rs  task.test.rs  team_file.rs  team_file.test.rs  teammate.rs  teammate.test.rs  test_support.rs  types.rs  types.test.rs  worktree.rs  worktree.test.rs
coco-rs/core/context/: CLAUDE.md  Cargo.toml
coco-rs/core/messages/: CLAUDE.md  Cargo.toml
coco-rs/core/permissions/: CLAUDE.md  Cargo.toml
coco-rs/core/subagent/: CLAUDE.md  Cargo.toml
coco-rs/core/system-reminder/: CLAUDE.md  Cargo.toml  README.md
coco-rs/core/tool/: CLAUDE.md  Cargo.toml
coco-rs/core/tool-runtime/: CLAUDE.md  Cargo.toml
coco-rs/core/tools/: CLAUDE.md  Cargo.toml
coco-rs/exec/apply-patch/: CLAUDE.md  Cargo.toml
coco-rs/exec/exec-server/: CLAUDE.md  Cargo.toml
coco-rs/exec/process-hardening/: CLAUDE.md  Cargo.toml
coco-rs/exec/sandbox/: CLAUDE.md  Cargo.toml
coco-rs/exec/shell/: CLAUDE.md  Cargo.toml
coco-rs/hooks/: CLAUDE.md  Cargo.toml
coco-rs/hooks/examples/: export_hook_input_schema.rs
coco-rs/hooks/src/: async_registry.rs  async_registry.test.rs  error.rs  function_hook.rs  function_hook.test.rs  inputs.rs  inputs.test.rs  lib.rs  lib.test.rs  llm_handle.rs  orchestration.rs  orchestration.test.rs  reminder_source.rs  reminder_source.test.rs  ssrf.rs  ssrf.test.rs  sync_hook_buffer.rs  sync_hook_buffer.test.rs
coco-rs/hub/connector/: CLAUDE.md  Cargo.toml
coco-rs/hub/protocol/: CLAUDE.md  Cargo.toml
coco-rs/hub/server/: CLAUDE.md  Cargo.toml
coco-rs/keybindings/: CLAUDE.md  Cargo.toml
coco-rs/keybindings/src/: action.rs  action.test.rs  adapter.rs  adapter.test.rs  context.rs  context.test.rs  defaults.rs  defaults.test.rs  display.rs  display.test.rs  lib.rs  lib.test.rs  loader.rs  loader.test.rs  parser.rs  parser.test.rs  reserved.rs  reserved.test.rs  resolver.rs  resolver.test.rs  template.rs  template.test.rs  validator.rs  validator.test.rs
coco-rs/memory/: CLAUDE.md  Cargo.toml
coco-rs/memory/src/: agent_memory.rs  agent_memory.test.rs  agent_memory_snapshot.rs  agent_memory_snapshot.test.rs  auto_dream.rs  auto_dream.test.rs  can_use_tool.rs  can_use_tool.test.rs  classify.rs  classify.test.rs  compact_truncate.rs  compact_truncate.test.rs  config.rs  config.test.rs  hooks.rs  hooks.test.rs  kairos.rs  kairos.test.rs  lib.rs  lib.test.rs  lock.rs  lock.test.rs  memdir.rs  memdir.test.rs  notice.rs  notice.test.rs  permissions.rs  permissions.test.rs  prefetch.rs  prefetch.test.rs  prompt.rs  prompt.test.rs  recall.rs  recall.test.rs  runtime.rs  scan.rs  scan.test.rs  security.rs  security.test.rs  session_memory.rs  (+8 more)
coco-rs/output-styles/: CLAUDE.md  Cargo.toml
coco-rs/output-styles/src/: builtin.rs  builtin.test.rs  catalog.rs  dir_loader.rs  dir_loader.test.rs  error.rs  lib.rs  manager.rs  manager.test.rs  plugin_loader.rs  plugin_loader.test.rs  resolver.rs  resolver.test.rs
coco-rs/plugins/: CLAUDE.md  Cargo.toml
coco-rs/plugins/src/: builtins.rs  builtins.test.rs  command_bridge.rs  command_bridge.test.rs  dependency.rs  dependency.test.rs  errors.rs  fetch.rs  fetch.test.rs  hints.rs  hints.test.rs  hook_bridge.rs  hook_bridge.test.rs  hot_reload.rs  hot_reload.test.rs  identifier.rs  identifier.test.rs  install.rs  install.test.rs  lib.rs  lib.test.rs  loader.rs  loader.test.rs  lsp_bridge.rs  lsp_bridge.test.rs  marketplace.rs  marketplace.test.rs  mcp_bridge.rs  mcp_bridge.test.rs  mcpb.rs  mcpb.test.rs  official.rs  official.test.rs  parse_marketplace_input.rs  parse_marketplace_input.test.rs  (+12 more)
coco-rs/retrieval/: CLAUDE.md  Cargo.toml
coco-rs/scripts/: check-error-policy.sh  check-tui-ui-seam.sh  check-vercel-ai-seam.sh  coco-sdk-via-cargo.sh  error-policy-allowlist.txt  run-sdk-py-tests.sh  update-model-card-openrouter.sh
coco-rs/skills/: CLAUDE.md  Cargo.toml
coco-rs/tasks/: CLAUDE.md  Cargo.toml
coco-rs/tui-markdown/: CLAUDE.md  Cargo.toml
coco-rs/tui-mermaid/: CLAUDE.md  Cargo.toml
coco-rs/tui-ui/: CLAUDE.md  Cargo.toml
coco-rs/vercel-ai/: README.md
coco-sdk/python/: pyproject.toml
cocode-rs/app-server/: Cargo.toml
cocode-rs/app-server-protocol/: Cargo.toml
cocode-sdk/python/: pyproject.toml
codex-rs/codex-hooks/: Cargo.toml
codex-rs/retrieval/: Cargo.toml  README.md
(+5777 files in other folders)
