[workspace]
members = [
    # ─── common/ (5) ───
    "common/error",
    "common/stack-trace-macro",
    "common/otel",
    "common/types",
    "common/config",

    # ─── utils/ (26) ── 24 from cocode-rs + 2 new ───
    "utils/absolute-path",
    "utils/apply-patch",
    "utils/async-utils",
    "utils/cache",
    "utils/cargo-bin",
    "utils/common",
    "utils/cursor",
    "utils/file-encoding",
    "utils/file-ignore",
    "utils/file-search",
    "utils/file-watch",
    "utils/frontmatter",
    "utils/git",
    "utils/image",
    "utils/json-to-toml",
    "utils/keyring-store",
    "utils/pty",
    "utils/readiness",
    "utils/rustls-provider",
    "utils/secret-redact",
    "utils/shell-parser",
    "utils/sleep-inhibitor",
    "utils/stdio-to-uds",
    "utils/stream-parser",
    "utils/string",
    "utils/symbol-search",
    "utils/test-harness",

    # ─── vercel-ai/ (8) ───
    "vercel-ai/provider",
    "vercel-ai/provider-utils",
    "vercel-ai/ai",
    "vercel-ai/openai",
    "vercel-ai/openai-compatible",
    "vercel-ai/google",
    "vercel-ai/anthropic",
    "vercel-ai/bytedance",

    # ─── services/ (6) ───
    "services/inference",
    "services/mcp",
    "services/mcp-types",
    "services/rmcp-client",
    "services/lsp",
    "services/compact",

    # ─── core/ (5) ───
    "core/messages",
    "core/context",
    "core/permissions",
    "core/tool",
    "core/tools",

    # ─── exec/ (3) ───
    "exec/shell",
    "exec/sandbox",
    "exec/process-hardening",

    # ─── root modules (7) ───
    "commands",
    "skills",
    "hooks",
    "tasks",
    "memory",
    "plugins",
    "keybindings",

    # ─── app/ (5) ───
    "app/query",
    "app/state",
    "app/session",
    "app/tui",
    "app/cli",

    # ─── standalone (2) ───
    "bridge",
    "retrieval",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# Internal - common
coco-error = { path = "common/error" }
coco-stack-trace-macro = { path = "common/stack-trace-macro" }
coco-otel = { path = "common/otel" }
coco-types = { path = "common/types" }
coco-config = { path = "common/config" }

# Internal - utilities
coco-file-encoding = { path = "utils/file-encoding" }
coco-async-utils = { path = "utils/async-utils" }
coco-keyring-store = { path = "utils/keyring-store" }
coco-file-ignore = { path = "utils/file-ignore" }
coco-file-search = { path = "utils/file-search" }
coco-file-watch = { path = "utils/file-watch" }
coco-symbol-search = { path = "utils/symbol-search" }
coco-git = { path = "utils/git" }
coco-utils-absolute-path = { path = "utils/absolute-path" }
coco-utils-cache = { path = "utils/cache" }
coco-utils-cargo-bin = { path = "utils/cargo-bin" }
coco-utils-common = { path = "utils/common" }
coco-utils-image = { path = "utils/image" }
coco-utils-json-to-toml = { path = "utils/json-to-toml" }
coco-utils-pty = { path = "utils/pty" }
coco-utils-readiness = { path = "utils/readiness" }
coco-utils-string = { path = "utils/string" }
coco-stdio-to-uds = { path = "utils/stdio-to-uds" }
coco-apply-patch = { path = "utils/apply-patch" }
coco-shell-parser = { path = "utils/shell-parser" }
coco-utils-rustls-provider = { path = "utils/rustls-provider" }
coco-utils-stream-parser = { path = "utils/stream-parser" }
coco-utils-sleep-inhibitor = { path = "utils/sleep-inhibitor" }
coco-secret-redact = { path = "utils/secret-redact" }
coco-frontmatter = { path = "utils/frontmatter" }
coco-cursor = { path = "utils/cursor" }

# Internal - Vercel AI SDK
vercel-ai-provider = { path = "vercel-ai/provider" }
vercel-ai-provider-utils = { path = "vercel-ai/provider-utils" }
vercel-ai = { path = "vercel-ai/ai" }
vercel-ai-openai = { path = "vercel-ai/openai" }
vercel-ai-openai-compatible = { path = "vercel-ai/openai-compatible" }
vercel-ai-google = { path = "vercel-ai/google" }
vercel-ai-anthropic = { path = "vercel-ai/anthropic" }
vercel-ai-bytedance = { path = "vercel-ai/bytedance" }

# Internal - services
coco-inference = { path = "services/inference" }
coco-mcp = { path = "services/mcp" }
coco-mcp-types = { path = "services/mcp-types" }
coco-rmcp-client = { path = "services/rmcp-client" }
coco-lsp = { path = "services/lsp" }
coco-compact = { path = "services/compact" }
coco-test-harness = { path = "utils/test-harness" }

# Internal - core
coco-messages = { path = "core/messages" }
coco-context = { path = "core/context" }
coco-permissions = { path = "core/permissions" }
coco-tool = { path = "core/tool" }
coco-tools = { path = "core/tools" }

# Internal - exec
coco-shell = { path = "exec/shell" }
coco-sandbox = { path = "exec/sandbox" }
coco-process-hardening = { path = "exec/process-hardening" }

# Internal - root modules
coco-commands = { path = "commands" }
coco-skills = { path = "skills" }
coco-hooks = { path = "hooks" }
coco-tasks = { path = "tasks" }
coco-memory = { path = "memory" }
coco-plugins = { path = "plugins" }
coco-keybindings = { path = "keybindings" }

# Internal - app
coco-query = { path = "app/query" }
coco-state = { path = "app/state" }
coco-session = { path = "app/session" }
coco-tui = { path = "app/tui" }
coco-cli = { path = "app/cli" }

# Internal - standalone
coco-bridge = { path = "bridge" }
coco-retrieval = { path = "retrieval" }

# External (only those actually used by existing crates)
anyhow = "1"
assert_cmd = "2"
assert_matches = "1.5.0"
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.42"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15.7"
eventsource-stream = "0.2.3"
form_urlencoded = "1"
futures = { version = "0.3", default-features = false }
globset = "0.4"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
html2text = "0.14"
http = "1.3.1"
humantime-serde = "1"
ignore = "0.4.23"
image = { version = "^0.25.9", default-features = false }
mime_guess = "2.0.5"
keyring = "3"
lazy_static = "1"
libc = "0.2"
log = "0.4"
lru = "0.16.3"
minijinja = "2"
nucleo = { git = "https://github.com/helix-editor/nucleo.git", rev = "4253de9faabb4e5c6d81d946a5e35a90f87347ee" }
notify = "8"
once_cell = "1.20.2"
opentelemetry = "0.31.0"
opentelemetry-appender-tracing = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = "0.31.0"
path-absolutize = "3.1.1"
portable-pty = "0.9.0"
pretty_assertions = "1.4.1"
rand = "0.9"
regex = "1.12.2"
regex-lite = "0.1.8"
reqwest = "0.12"
rustls = { version = "0.23", features = ["ring"] }
schemars = "0.8.22"
serde = "1"
serde_json = "1"
serde_path_to_error = "0.1"
shlex = "1"
serde_yml = "0.0.12"
similar = "2"
snafu = "0.8"
sse-stream = "0.2.1"
streaming-iterator = "0.1"
strum = { version = "0.27", features = ["derive"] }
sha1 = "0.10.6"
tempfile = "3.23.0"
thiserror = "2.0.17"
time = "0.3"
tokio = "1"
tokio-stream = "0.1.18"
tree-sitter = "0.25"
tree-sitter-bash = "0.25"
tonic = "0.12"
tokio-util = "0.7"
toml = "0.9.5"
tracing = "0.1.43"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = "0.3.22"
ts-rs = "11"
uuid = "1"
walkdir = "2.5.0"
wiremock = "0.6"
zip = { version = "2", default-features = false, features = ["deflate"] }
uds_windows = "1"

# External - MCP related
axum = { version = "0.8", default-features = false }
dirs = "6"
oauth2 = "5"
rmcp = { version = "0.12.0", default-features = false }
serial_test = "3"
sha2 = "0.10"
tiny_http = "0.12"
urlencoding = "2"
webbrowser = "1"
which = "7"
arboard = "3"

# External - retrieval / TUI related
async-stream = "0.3"
crossbeam-channel = "0.5"
crossterm = "0.28"
derive_more = "2"
insta = "1"
itertools = "0.14"
ratatui = "0.29"
ratatui-macros = "0.6"
textwrap = "0.16"
tokio-test = "0.4"
tracing-appender = "0.2"
tree-sitter-highlight = "0.25"
unicode-segmentation = "1"
unicode-width = "0.2"
vt100 = "0.15"

# i18n
rust-i18n = "3"

[workspace.lints]
rust = {}

[workspace.lints.clippy]
expect_used = "deny"
identity_op = "deny"
manual_clamp = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_flatten = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_retain = "deny"
manual_strip = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"
needless_question_mark = "deny"
needless_update = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
redundant_static_lifetimes = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
unnecessary_filter_map = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_sort_by = "deny"
unnecessary_to_owned = "deny"
unwrap_used = "deny"

[workspace.metadata.cargo-shear]
ignored = ["coco-utils-readiness"]

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 1

[profile.ci]
inherits = "dev"
strip = true
debug = false

[profile.ci-test]
debug = 1
inherits = "test"
opt-level = 0
