[package]
name = "coco-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
coco-types.workspace = true

async-trait.workspace = true
base64.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
anyhow.workspace = true
hmac = "0.12"
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "net", "io-util"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
pretty_assertions.workspace = true
tempfile.workspace = true
