[package]
name = "coco-hooks"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
coco-types.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["sync", "process", "time"] }
tokio-util.workspace = true
globset.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["json"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
