[package]
name = "coco-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
coco-config.workspace = true
coco-types.workspace = true
coco-tool-runtime.workspace = true
coco-frontmatter.workspace = true
coco-git.workspace = true
coco-otel.workspace = true
coco-secret-redact.workspace = true
coco-file-watch.workspace = true

tokio = { workspace = true, features = ["rt", "sync", "time", "fs", "macros"] }
notify = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
sha2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
filetime = "0.2"
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time", "fs", "macros", "rt-multi-thread"] }
