[package]
name = "coco-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
coco-types.workspace = true
coco-skills.workspace = true
coco-hooks.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
toml.workspace = true
chrono = { workspace = true, features = ["serde"] }
regex.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
