[package]
name = "coco-retrieval"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "coco_retrieval"
path = "src/lib.rs"

[[bin]]
name = "retrieval"
path = "src/bin/retrieval_cli.rs"

[dependencies]
# CLI
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }

# File watching
notify = { workspace = true }
notify-debouncer-mini.workspace = true
# Storage
rusqlite = { workspace = true }
sqlite-vec.workspace = true
zerocopy = { workspace = true }

# Code chunking - CodeSplitter (tree-sitter based) with TextSplitter fallback
text-splitter = { workspace = true }

# Token counting for chunk validation (must match text-splitter's version for ChunkSizer trait)
tiktoken-rs.workspace = true

# Tree-sitter for syntax analysis (using workspace version)
tree-sitter = { workspace = true }

# Tree-sitter tags extraction
tree-sitter-tags.workspace = true

# Language grammars for tag extraction
tree-sitter-rust.workspace = true
tree-sitter-go.workspace = true
tree-sitter-python.workspace = true
tree-sitter-java.workspace = true
tree-sitter-typescript.workspace = true

# Query preprocessing
rust-stemmers.workspace = true

# BM25 full-text search (custom implementation with tunable k1/b parameters)
bm25 = { workspace = true }

# Graph algorithms for PageRank (repo map)
petgraph.workspace = true

# Async
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
async-trait = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true, features = ["executor"] }

# HTTP client for embeddings
reqwest = { workspace = true, features = ["json"] }

# Utils
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex.workspace = true
uuid = { workspace = true, features = ["v4"] }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
regex = { workspace = true }
once_cell = { workspace = true }
toml = { workspace = true }

# LRU cache for recently edited files
lru = { workspace = true }

# Local neural reranking (optional)
fastembed = { workspace = true, optional = true }

# Internal
coco-file-ignore = { workspace = true }
coco-utils-common = { workspace = true }
coco-utils-cache = { workspace = true }
dirs = { workspace = true }

# TUI (same tech stack as codex-tui2)
ratatui = { workspace = true, features = [
    "scrolling-regions",
    "unstable-backend-writer",
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
ratatui-macros = { workspace = true }
crossterm = { workspace = true, features = ["bracketed-paste", "event-stream"] }
tree-sitter-highlight = { workspace = true }
unicode-width = { workspace = true }
unicode-segmentation = { workspace = true }
textwrap = { workspace = true }
tokio-stream = { workspace = true }
itertools = { workspace = true }
derive_more = { workspace = true, features = ["is_variant"] }

[features]
default = []
# Enable local neural reranking with fastembed (ONNX Runtime)
neural-reranker = ["fastembed"]
# Enable local embeddings with fastembed (ONNX Runtime)
local-embeddings = ["fastembed"]
# Enable all local features (embeddings + reranking)
local = ["local-embeddings", "neural-reranker"]

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
pretty_assertions = { workspace = true }
insta = { workspace = true }
vt100 = { workspace = true }
