[package]
name = "coco-skills"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
coco-types.workspace = true
coco-file-watch.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync", "process", "time", "rt", "macros"] }
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
