[package]
name = "cocode-app-server-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Universal client-facing protocol for cocode frontends (SDK, TUI, IDE)"

[lib]
name = "cocode_app_server_protocol"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }

[[bin]]
name = "export-app-server-schema"
path = "src/export.rs"

[dev-dependencies]
pretty_assertions = { workspace = true }
