[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cocode-sdk"
version = "0.1.0"
description = "Python SDK for cocode — programmatic access to the multi-provider LLM CLI"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "anyio>=4.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cocode_sdk"]
