[package]
name = "codex-hooks"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
once_cell = "1.19"
tracing = "0.1"
chrono = "0.4"

# Internal dependencies
codex-protocol = { path = "../protocol" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
serial_test = "3.0"
