[package]
name = "coco-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "coco"
path = "src/main.rs"

[dependencies]
coco-types.workspace = true
coco-bridge.workspace = true
coco-commands.workspace = true
coco-config.workspace = true
coco-session.workspace = true
coco-inference.workspace = true
coco-tool.workspace = true
coco-tools.workspace = true
coco-query.workspace = true
coco-messages.workspace = true
coco-context.workspace = true
coco-mcp.workspace = true
coco-permissions.workspace = true
coco-plugins.workspace = true
coco-state.workspace = true
coco-tui.workspace = true
vercel-ai-provider.workspace = true
vercel-ai-anthropic.workspace = true
vercel-ai-openai.workspace = true
vercel-ai-google.workspace = true
uuid = { workspace = true, features = ["v4"] }

dirs.workspace = true
chrono.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
